# quantmaster

./: .gitignore  README.md  VERSIONING.md  causal_features_trading.md  mkdocs.yml  new_feature.md  pyproject.toml  review.md  task.md
.agents/skills/feature-discovery/: SKILL.md
.agents/skills/feature-docs/: SKILL.md
.agents/skills/feature-implementation/: SKILL.md
.agents/skills/feature-testing/: SKILL.md
.agents/skills/release-check/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: agent-check.yml  ci.yml  docs.yml  publish.yml
docs/: agent-prompts.md  agent-workflow.md  feature-status.md  index.md
docs/features/: index.md
docs/features/entropy/: permutation_entropy.md  shannon_entropy.md
docs/features/microstructure/: amihud_illiquidity.md  corwin_schultz_spread.md  order_flow_imbalance_range.md  relative_spread_proxy.md  roll_spread.md  vpin_proxy.md  vwap_deviation.md
docs/features/momentum/: chande_momentum_oscillator.md  momentum_volatility_state.md  rsi.md  time_series_momentum.md
docs/features/regime/: cusum_statistic.md  market_efficiency_index.md  runs_test_statistic.md  variance_ratio.md
docs/features/returns/: intraday_return.md  overnight_gap.md
docs/features/risk/: expected_shortfall.md  max_drawdown_duration.md  tail_risk_measure.md  value_at_risk_historical.md
docs/features/statistical/: absolute_return_autocorrelation.md  approximate_entropy.md  cross_sample_entropy.md  downside_beta.md  fracdiff.md  fractal_dimension_mincover.md  generalized_hurst_exponent.md  hurst_dfa.md  information_discreteness.md  mean_reversion_half_life.md  ornstein_uhlenbeck.md  path_signature_features.md  permutation_entropy.md  realized_kurtosis.md  realized_skewness.md  return_autocorrelation.md  rolling_beta.md  sample_entropy.md  spread_zscore.md
docs/features/trend/: bar_range_position.md  body_to_range_ratio.md  kaufman_efficiency_ratio.md  lower_shadow_ratio.md  price_acceleration.md  trend_intensity.md  trend_strength_autocorr.md  trend_strength_indicator.md  upper_shadow_ratio.md
docs/features/utils/: create_all.md
docs/features/volatility/: bipower_variation.md  garman_klass_volatility.md  har_rv.md  har_rv_forecast.md  harq_adjustment.md  intraday_range.md  jump_variation.md  (+13 more)
feature_specs/: README.md  momentum_volatility_state.md  relative_jump_contribution.md
research/archive/: plan.md  review.md  task.md  walkthrough.md
scripts/: agent_verify.ps1  new_feature.ps1
src/quantmaster/: __init__.py  feature_status.py
templates/: doc_feature.md.tpl  feature_module.py.tpl  test_feature.py.tpl
tests/: conftest.py  helpers.py  test_benchmark_features.py  test_btc_integration.py  test_entropy.py  test_microstructure.py  test_momentum.py  test_regime.py  test_returns.py  test_risk.py  test_statistical.py  test_trend.py  test_utils.py  test_volatility.py  test_volume.py
tests/data/: btc_1d.csv
(+19 files in other folders)
