[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmaster"
version = "0.1.0"
description = "Biblioteca de features quantitativas para algorithmic trading (OHLCV -> features)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/wolfox33/quantmaster"
Source = "https://github.com/wolfox33/quantmaster"
Documentation = "https://wolfox33.github.io/quantmaster/"
Issues = "https://github.com/wolfox33/quantmaster/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
