[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmaster"
version = "0.2.2"
description = "Biblioteca de features quantitativas para algorithmic trading (OHLCV -> features)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Quantmaster contributors" },
]
keywords = ["quant", "trading", "finance", "feature-engineering", "ohlcv", "pandas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
]

[project.urls]
Homepage = "https://github.com/wolfox33/quantmaster"
Source = "https://github.com/wolfox33/quantmaster"
Documentation = "https://wolfox33.github.io/quantmaster/"
Issues = "https://github.com/wolfox33/quantmaster/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]
signatures = [
  "iisignature",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E741", "SIM108", "B006", "B028"]

[tool.ruff.lint.per-file-ignores]
"src/quantmaster/features/__init__.py" = ["F401"]
